# worse_itertools

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_accumulate.py  test_chain.py  test_count.py  test_cycle.py  test_repeat.py  test_tee.py
worse_itertools/: __init__.py
