[tool.poetry]
name = "worse_itertools"
version = "0.1.0"
description = ""
authors = ["GDWR <gregory.dwr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
